# ZRTPCPP

./: .gitignore  .gitmodules  0001-Added-support-for-OpenSSL-1.1.0.-Lots-of-structure-t.patch  AUTHORS  CMakeLists.txt  CMakeLists_gtest.txt.in  ChangeLog  INSTALL  Makefile.am  NEWS  NEWS.md  NpEccDetails.md  README  README.md  README_SIDH.md  Zrtp2022.graphml  autogen.sh  build.gradle  buildNativeAndroidTivi.sh  config.h.cmake  configure.ac  directive  gradle.properties  libzrtpcpp.pc.cmake  libzrtpcpp.pc.in  libzrtpcpp.spec.cmake  libzrtpcpp.spec.in  reconfig  settings.gradle
AndroidZrtpLib/noClient/: build.gradle
AndroidZrtpLib/zrtpLib/: build.gradle
LICENSES/: summary.md
bnlib/: bn.h  bn00.c  bn16.c  bn32.c  bn64.c  bnprint.c  bnprint.h  bnsize00.h  germain.c  lbn.h  lbn00.c  lbn16.c  lbn32.c  lbn64.c  lbnmem.c  prime.c  sieve.c
bnlib/ec/: ec.c  ec.h  ecdh.c  ecdh.h
botancrypto/: Ec41417Group.cpp  Ec41417Group.h  Point41417.cpp  Point41417.h  ZrtpBotanRng.cpp  ZrtpBotanRng.h  ZrtpCurve41417.cpp  ZrtpCurve41417.h
botancrypto/x86_64/: botan_all.cpp  botan_all.h
clients/ccrtp/: CMakeLists.txt  CcrtpTimeoutProvider.h  ZrtpQueue.cpp  ZrtpQueue.h  zrtpccrtp.h
clients/genericClient/: CMakeLists.txt  GenericPacketFilter.cpp  GenericPacketFilter.h
clients/no_client/: CMakeLists.txt
clients/tivi/: CMakeLists.txt  CtZrtpCallback.h  CtZrtpSession.cpp  CtZrtpSession.h  CtZrtpStream.cpp  CtZrtpStream.h  MutexClass.h  Thread.cpp  TimeoutProvider.h  TiviTimeoutProvider.h  sdesTestdriver.cpp  testdriver.cpp
clients/tivi/android/jni/: Android.mk  Application.mk
clients/tivi/android/jni/sqlite3/: Android.mk.cmake
clients/tivi/android/jni/zrtplib/: Android.mk.cmake
clients/tivi/swigJava/: SessionTest.java  sessionTest.i
clients/tivi/timeoutHelper/: MutexClass.h  Thread.h
clients/webrtc/: CMakeLists.txt
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: FindGcryptConfig.cmake  GeneratePackage.cmake  SourceDistribution.cmake
common/: Constants.h  SecureArray.h  Thread.cpp  Thread.h  Utilities.cpp  Utilities.h  ZrtpConfigureBuilder.cpp  ZrtpConfigureBuilder.h  ZrtpConstants.h  ZrtpTimeoutProvider.h  icuUtf.h  icuUtf8.c  osSpecifics.c  osSpecifics.h  typedefs.h
cryptcommon/: ZrtpRandom.cpp  ZrtpRandom.h  aesopt.h  macSkein.cpp  macSkein.h  skeinApi.c  skein_port.h  twofish.h
cryptcommon/sidhp751/: SIDH.c  SIDH.h  SIDH_api.h  SIDH_internal.h  SIDH_setup.c  ec_isogeny.c  fpx.c  kex.c
demo/: CMakeLists.txt  Makefile.am  README  sdestest.cpp  wrappertest.c  zrtptest.cpp  zrtptestMulti.cpp
doc/: Doxymini  Makefile.am  Makefile.in
gradle/wrapper/: gradle-wrapper.properties
helpers/: ZrtpCodeToString.cpp  ZrtpCodeToString.h  ZrtpConfigureBuilder.cpp  ZrtpUserCallbackEmpty.h
logging/: Logger.cpp  Logger.h  ZrtpLogging.cpp  ZrtpLogging.h  logger_config.h  osSpecifics.h
m4/: Makefile.am  ost_cxx.m4  ost_debug.m4  ost_endian.m4  ost_maint.m4  ost_misc.m4  ost_posix.m4  ost_prog.m4  ost_systime.m4
src/: Base32.cxx  CMakeLists.txt  Makefile.am  ZIDFile.cpp  ZIDFile.cxx  ZIDRecord.cxx  ZRtp.cpp  ZRtp.cxx  ZrtpCWrapper.cpp  ZrtpCallbackWrapper.cpp  ZrtpConfigure.cpp  ZrtpConfigure.cxx  ZrtpCrc32.cxx  ZrtpPacketClearAck.cxx  ZrtpPacketCommit.cxx  ZrtpPacketConf2Ack.cxx  ZrtpPacketConfirm.cxx  ZrtpPacketDHPart.cpp  ZrtpPacketDHPart.cxx  ZrtpPacketError.cxx  ZrtpPacketErrorAck.cpp  ZrtpPacketGoClear.cxx  ZrtpPacketHello.cpp  ZrtpPacketHello.cxx  ZrtpPacketHelloAck.cxx  ZrtpPacketPing.cxx  ZrtpQueue.cpp  ZrtpStateClass.cpp  ZrtpStateClass.cxx  ZrtpTextData.cpp  ZrtpTextData.cxx
src/libzrtpcpp/: Base32.h  CMakeLists.txt  Makefile.am  TimeoutProvider.h  ZIDFile.h  ZIDRecord.h  ZRtp.h  ZrtpCWrapper.h  ZrtpCallback.h  ZrtpCallbackWrapper.h  ZrtpCodes.h  ZrtpConfigure.h  ZrtpCrc32.h  ZrtpPacketBase.h  ZrtpPacketClearAck.h  ZrtpPacketCommit.h  ZrtpPacketConf2Ack.h  ZrtpPacketConfirm.h  ZrtpPacketDHPart.h  ZrtpPacketError.h  ZrtpPacketErrorAck.h  ZrtpPacketGoClear.h  ZrtpPacketHello.h  ZrtpPacketHelloAck.h  ZrtpPacketPing.h  ZrtpPacketPingAck.h  ZrtpQueue.h  ZrtpStateClass.h  ZrtpStates.h  ZrtpTextData.h  ZrtpUserCallback.h  zrtpPacket.h  zrtpccrtp.h
src/libzrtpcpp/crypto/: CMakeLists.txt  Makefile.am  ZrtpDH.h  aesCFB.h  hmac256.h  hmac384.h  sha256.h  sha384.h  twofish.h
src/libzrtpcpp/crypto/gcrypt/: InitializeGcrypt.cxx  gcryptAesCFB.cpp  gcryptZrtpDH.cpp  gcryptZrtpDH.cxx  gcrypthmac256.cxx  gcryptsha256.cxx
src/libzrtpcpp/crypto/openssl/: AesCFB.cpp  InitializeOpenSSL.cpp  InitializeOpenSSL.cxx  ZrtpDH.cpp  ZrtpDH.cxx  hmac256.cxx  sha256.cxx  sha384.cxx
srtp/: CryptoContext.cpp  CryptoContext.h  CryptoContextCtrl.cpp  CryptoContextCtrl.h  SrtpHandler.cpp  SrtpHandler.h
srtp/crypto/: AesSrtp.h  SrtpSymCrypto.cpp  SrtpSymCrypto.h  (+8 more)
unittests/: BotanEc41417_test.cpp  BotanSkein_test.cpp  CMakeLists.txt  GenericFilterTimed_test.cpp  GenericFilter_test.cpp  HKDF_test.cpp  NetworkSimulation.h  SrtpCrypto_test.cpp  ZidStorage_test.cpp  ZrtpBasicRun_test.cpp  ZrtpConfigure_test.cpp  ZrtpFrame_test.cpp  ZrtpHello_test.cpp  ZrtpKemCrypto_test.cpp  ZrtpNewCrypto_test.cpp  ZrtpSidh503_test.cpp  ZrtpSidh751_test.cpp  ZrtpStartStop_test.cpp  ZrtpTemplate_test.cpp  ZrtpTestCommon.h  ZrtpTimedRun_test.cpp  ZrtpTimeout_test.cpp  catchMain.cpp  sdesRun_test.cpp  utility_test.cpp  zrtpConfigureTest.cpp  zrtpConfigure_test.cpp  zrtpTimeout_test.cpp
zrtp/: Base32.cpp  EmojiBase32.cpp  ZIDCacheDb.cpp  ZIDCacheEmpty.cpp  ZIDCacheFile.cpp  ZIDRecordDb.cpp  ZIDRecordFile.cpp  ZRtp.cpp  ZrtpCWrapper.cpp  ZrtpCallbackWrapper.cpp  ZrtpConfigure.cpp  ZrtpCrc32.cpp  ZrtpFrames.cpp  ZrtpPacketClearAck.cpp  ZrtpPacketCommit.cpp  ZrtpPacketConf2Ack.cpp  ZrtpPacketConfirm.cpp  ZrtpPacketDHPart.cpp  ZrtpPacketError.cpp  ZrtpPacketErrorAck.cpp  ZrtpPacketGoClear.cpp  ZrtpPacketHello.cpp  ZrtpPacketHelloAck.cpp  ZrtpPacketPing.cpp  ZrtpPacketPingAck.cpp  ZrtpPacketRelayAck.cpp  ZrtpPacketSASrelay.cpp  ZrtpSdesStream.cpp  ZrtpStateClass.cpp  ZrtpStateClassImpl.cpp  ZrtpStateEngineImpl.cpp  ZrtpTextData.cpp  zrtpB64Decode.c  zrtpB64Encode.c  zrtpCacheSqliteBackend.c  zrtpCacheSqliteBackend.cpp
(+128 files in other folders)
